testing framework complete

--- a/samplewebproject/index.html
+++ b/samplewebproject/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- added to code to make jsdom load all scripts and wait before executing tests in dom
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                 console.log(window.stuffLoaded);
+            });
+       </script> -->
     </head>
     <body>
         <form>
